compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.kt
// RUN_PIPELINE_TILL: FIR
// ISSUE: KT-58483
// MODULE: jvm
// FILE: jvm.kt
expect class <!NO_ACTUAL_FOR_EXPECT!>A<!>
